[package]
name = "openrpc_type"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["DeltaChat Contributors", "Simon Laux"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
schemars = "0.8.11"
