[package]
name = "openrpc_type"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["DeltaChat Contributors", "Simon Laux"]
repository = "https://github.com/deltachat/openrpc_type/"
exclude = [
    ".github",
    "example_files",
    "tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
schemars = "0.8.11"

[dev-dependencies]
anyhow = "1.0.71"
